hphp/hack/test/typecheck/reserved_name24.php.exp
File "reserved_name24.php", line 5, characters 7-13:
Integer cannot be used as it is reserved. (Naming[2068])
