hphp/hack/test/typecheck/reserved_name24.php
<?hh

namespace Foo;

class Integer {}
